testsuite/tests/typecheck/should_fail/T14055.stderr

T14055.hs:6:18: error: [GHC-83865]
    • Expected kind ‘() -> X’, but ‘t -> ()’ has kind ‘*’
    • In the first argument of ‘RollX’, namely ‘(t -> ())’
      In the type ‘RollX (t -> ())’
      In the type family declaration for ‘F’
